# ir_project_remote

./: CMakeLists.txt  README.md  log.txt  prj.conf
board/: nrf52840dk_nrf52840.overlay
hex file/: Arduino_h.hex  IRrecv_cpp.hex  IRrecv_h.hex  IRremoteESP8266_h.hex  IRsend_cpp.hex  IRsend_h.hex  IRutils_cpp.hex  ir_Midea_h.hex  main_cpp.hex
src/: main.cpp
src/driver/: IRac.cpp  IRrecv.cpp  IRrecv.h  IRremoteESP8266.h  IRsend.cpp  IRsend.h  IRsendNRF52.cpp  IRsendNRF52.h  IRtext.cpp  IRtext.h  IRutils.cpp  IRutils.h  ZephyrIRReceiver.cpp  ZephyrIRSender.cpp  ir_hal.c  ir_hal.h
src/protocols/: ir_Haier.cpp  ir_Haier.h  ir_Midea.cpp  ir_Midea.h  ir_Panasonic.cpp  ir_Panasonic.h
src/shim/: Arduino.h
